force-app/main/default/objects/custom_create369__c/custom_create369__c.object-meta.xml
<CustomObject>
    <label>Custom created object369</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects369</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>