force-app/main/default/objects/custom_create369__c/fields/custom_create_369field502__c.field-meta.xml
<CustomField>
    <fullName>custom_create_369field502__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 369field502</label>
    <type>Checkbox</type>
</CustomField>