force-app/main/default/objects/custom_create369__c/fields/custom_create_369field677__c.field-meta.xml
<CustomField>
    <fullName>custom_create_369field677__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 369field677</label>
    <type>Checkbox</type>
</CustomField>